2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* doc/NEWS.txt: Update list of recent changes.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor `slr' improvements.

	* tools/lib/r-mt-sim.sh.in: Pass -d to simulator when `slr -t' is
	used. Move profile listing code to ...

	* tools/bin/slr.in: ... here. Also output command line with -t. Do
	not require a valid program with -m list.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* tools/lib/Makefile.am: Update profile list. 

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT profiles.

	* tools/lib/mt-profiles/coma128,
	* tools/lib/mt-profiles/coma256,
	* tools/lib/mt-profiles/default,
	* tools/lib/mt-profiles/simple,
	* tools/lib/mt-profiles/rmb128,
	* tools/lib/mt-profiles/rmb256,
	* tools/lib/mt-profiles/rmb4,
	* tools/lib/mt-profiles/rmb1: Use simple names always. Cleanup
	descriptions.

	* tools/lib/mt-profiles/ml-npcrypt-p1,
	* tools/lib/mt-profiles/ml-npcrypt-p2,
	* tools/lib/mt-profiles/ml-npcrypt-p4,
	* tools/lib/mt-profiles/ml-npcrypt-p8: New.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce the concept of "simulator profiles" in `slr'.

	A new option `slr -m' is added to specify a simulator profile for
	execution. A profile captures in a simple name all the
	architectural settings of a microgrid: nr of cores, memory
	configuration, etc.

	Profiles are searched first in `~/.mt-profiles', then in the
	`mt-profile' directory of the build or installation tree.
	
	* tools/bin/slr.in,
	* tools/lib/r-mt-sim.sh.in: Allow use of simulator profiles. 

	* tools/lib/mt-profiles/sifir,
	* tools/lib/mt-profiles/bir,
	* tools/lib/mt-profiles/uc,
	* tools/lib/mt-profiles/dort,
	* tools/lib/mt-profiles/bes,
	* tools/lib/mt-profiles/alti,
	* tools/lib/mt-profiles/default,
	* tools/lib/mt-profiles/simple,
	* tools/lib/mt-profiles/rmb128,
	* tools/lib/mt-profiles/rmb256,
	* tools/lib/mt-profiles/coma128,